# QWT

./: .gitignore  AGENTS.md  CHANGES-CN.md  CHANGES.md  CMakeLists.txt  DOXYGEN_OPTIMIZATION_PLAN.md  DOXYGEN_REFACTOR_PROGRESS.md  QwtPlot.cpp  QwtPlot.h  README-CN.MD  README.MD  build.md  build.ps1  mkdocs.yml  plan_modern_cpp_phase2.md  xmake.lua
bindings/: .gitignore  CMakeLists.txt
bindings/cmake/: FindPySide6Shiboken.cmake
bindings/cmake/Shiboken6Tools/: Shiboken6ToolsConfig.cmake
bindings/core/: global.h  typesystem_qwtcore.xml
bindings/tests/: conftest.py  test_core.py
examples/: CMakeLists.txt
examples/2D/animation/: CMakeLists.txt  Plot.cpp  Plot.h
examples/2D/barchart/: BarChart.cpp  CMakeLists.txt
examples/2D/bode/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Plot.cpp
examples/2D/boxchart/: BoxChart.cpp  BoxChart.h  CMakeLists.txt  main.cpp
examples/2D/controls/: CMakeLists.txt
examples/2D/cpuplot/: CMakeLists.txt  CpuPieMarker.h  CpuPlot.cpp  CpuPlot.h
examples/2D/curvedemo/: CMakeLists.txt  main.cpp
examples/2D/dials/: AttitudeIndicator.cpp  AttitudeIndicator.h  CMakeLists.txt  CockpitGrid.cpp  SpeedoMeter.h
examples/2D/distrowatch/: BarChart.cpp  CMakeLists.txt
examples/2D/figure/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PickLinker.cpp  PickLinker.h  main.cpp
examples/2D/friedberg/: CMakeLists.txt  Plot.cpp  Plot.h
examples/2D/itemeditor/: CMakeLists.txt  Editor.cpp  Editor.h  Plot.cpp
examples/2D/legends/: CMakeLists.txt  Plot.cpp  Plot.h
examples/2D/nanperf/: BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  FilterModes.h  MainWindow.cpp  MainWindow.h  NanDataGenerator.cpp  NanDataGenerator.h  PlotPanel.cpp  PlotPanel.h  main.cpp
examples/2D/oscilloscope/: CMakeLists.txt  Knob.h  Plot.cpp  Plot.h  SamplingThread.h  WheelBox.cpp
examples/2D/parasitePlot/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
examples/2D/polardemo/: CMakeLists.txt  Plot.cpp  PlotBox.cpp  PlotBox.h
examples/2D/polarspectrogram/: CMakeLists.txt  Plot.cpp  PlotWindow.cpp  PlotWindow.h  main.cpp
examples/2D/pyplot/: CMakeLists.txt  main.cpp
examples/2D/radio/: AmplifierBox.cpp  AmplifierBox.h  CMakeLists.txt  TunerBox.cpp  main.cpp
examples/2D/rasterview/: CMakeLists.txt  Plot.cpp
examples/2D/realtime/: CMakeLists.txt  IncrementalPlot.cpp  RandomPlot.cpp  RandomPlot.h  ScrollZoomer.cpp  ScrollZoomer.h
examples/2D/refreshtest/: CMakeLists.txt  CircularBuffer.h  (+3 more)
examples/qmakeExample/: README.md  main.cpp  qmakeExample.pro
examples/staticExample/: CMakeLists.txt  main.cpp
playground/: CMakeLists.txt
playground/curvetracker/: CMakeLists.txt  CurveTracker.h
playground/graphicscale/: CMakeLists.txt  Canvas.h
playground/legendicontest/: CMakeLists.txt  main.cpp
playground/plotmatrix/: CMakeLists.txt  PlotMatrix.cpp
playground/rescaler/: CMakeLists.txt  Plot.cpp  Plot.h
playground/scaleengine/: CMakeLists.txt  MainWindow.cpp  TransformPlot.cpp
playground/shapes/: CMakeLists.txt
playground/svgmap/: CMakeLists.txt
playground/symbols/: CMakeLists.txt
playground/timescale/: CMakeLists.txt
playground/vectorfield/: CMakeLists.txt
src/: CMakeLists.txt  qwt3d_axis.cpp  qwt3d_axis.h  qwt3d_io_gl2ps.cpp  qwt3d_volumeplot.h  qwt_global.h  qwt_version_info.h  qwt_version_info.h.in
src/core/: CMakeLists.txt  qwt_algorithm.hpp  qwt_bezier.h  qwt_box_statistics.cpp  qwt_box_statistics.h  qwt_clipper.h  qwt_color_cycle.cpp  qwt_color_cycle.h  qwt_colormap.cpp  qwt_colormap.h  qwt_colormap_preset.cpp  qwt_colormap_preset.h  qwt_date.cpp  qwt_date.h  qwt_grid_data.hpp  qwt_grid_raster_data.cpp  qwt_grid_raster_data.h  qwt_interval.cpp  qwt_interval.h  qwt_math.cpp  qwt_math.h  qwt_matrix_raster_data.cpp  qwt_matrix_raster_data.h  qwt_point_3d.cpp  qwt_point_3d.h  qwt_point_data.cpp  qwt_point_data.h  qwt_point_polar.cpp  qwt_point_polar.h  qwt_qt5qt6_compat.hpp  qwt_raster_data.cpp  qwt_raster_data.h  qwt_samples.h  qwt_scale_div.h  qwt_scale_engine.cpp  qwt_scale_engine.h  qwt_scale_map.cpp  qwt_scale_map.h  qwt_series_data.cpp  qwt_series_data.h  (+8 more)
src/plot/: CMakeLists.txt  qwt_abstract_legend.cpp  qwt_abstract_legend.h  qwt_abstract_scale.cpp  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_algorithm.hpp  qwt_analog_clock.cpp  qwt_analog_clock.h  qwt_arrow_button.cpp  qwt_arrow_button.h  qwt_axis.h  qwt_axis_id.h  qwt_bezier.cpp  qwt_bezier.h  qwt_box_statistics.cpp  qwt_box_statistics.h  qwt_cache_panner.cpp  qwt_cache_panner.h  qwt_canvas_picker.cpp  qwt_canvas_picker.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_cycle.cpp  qwt_color_cycle.h  qwt_color_map.cpp  qwt_color_map.h  qwt_colormap_compat.h  qwt_column_symbol.cpp  qwt_column_symbol.h  qwt_compass.cpp  qwt_compass.h  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_counter.h  qwt_curve_fitter.cpp  (+268 more)
src/plot3d/: CMakeLists.txt  qwt3d_autoptr.h  qwt3d_autoscaler.cpp  qwt3d_autoscaler.h  qwt3d_axis.cpp  qwt3d_axis.h  qwt3d_color.cpp  qwt3d_color.h  qwt3d_colorlegend.cpp  qwt3d_colorlegend.h  qwt3d_colormap_color.cpp  qwt3d_colormap_color.h  qwt3d_coordsys.cpp  qwt3d_coordsys.h  qwt3d_drawable.cpp  qwt3d_drawable.h  qwt3d_enrichment.h  qwt3d_enrichment_std.cpp  qwt3d_enrichment_std.h  qwt3d_function.cpp  qwt3d_function.h  qwt3d_global.h  qwt3d_graphplot.h  qwt3d_gridmapping.cpp  qwt3d_gridmapping.h  qwt3d_gridplot.cpp  qwt3d_helper.h  qwt3d_io.cpp  qwt3d_io.h  qwt3d_io_gl2ps.cpp  qwt3d_io_gl2ps.h  qwt3d_io_reader.cpp  qwt3d_io_reader.h  qwt3d_label.cpp  qwt3d_label.h  qwt3d_lighting.cpp  qwt3d_mapping.h  qwt3d_meshplot.cpp  qwt3d_mousekeyboard.cpp  qwt3d_movements.cpp  (+18 more)
tests/: CMakeLists.txt
tests/color_cycle_test/: CMakeLists.txt  test_color_cycle.cpp  test_color_cycle.h
tests/flat_style_test/: CMakeLists.txt  test_flat_style.cpp  test_flat_style.h
tests/picker_click_test/: CMakeLists.txt  test_picker_click.cpp  test_picker_click.h
tests/picker_group_click_test/: CMakeLists.txt  test_picker_group_click.cpp  test_picker_group_click.h
(+377 files in other folders)
